# ebpf-xdp-program

./: CHANGELOG.md  Cargo.toml  README.md  config.example.toml  docker-compose.yml  prometheus.yml
.cargo/: config.toml
.github/workflows/: ci.yml
ebpf-xdp-program/: Cargo.toml  build.rs
ebpf-xdp-program-common/: Cargo.toml
ebpf-xdp-program-common/src/: lib.rs
ebpf-xdp-program-ebpf/: Cargo.toml
ebpf-xdp-program-ebpf/src/: main.rs
ebpf-xdp-program/src/: alert.rs  anomaly.rs  baseline.rs  config.rs  main.rs  metrics.rs  pipeline.rs  rate.rs  stats.rs
ebpf-xdp-program/src/alert/: manager.rs  model.rs  semantics.rs  state.rs
ebpf-xdp-program/src/anomaly/: classifier.rs  detector.rs  emergency.rs  ewma.rs  zscore.rs
ebpf-xdp-program/src/baseline/: estimator.rs  ewma.rs  proto.rs
ebpf-xdp-program/src/pipeline/: analyze.rs  runner.rs
ebpf-xdp-program/src/rate/: compute.rs  model.rs
ebpf-xdp-program/src/stats/: alert.rs  analyze.rs  anomaly.rs  baseline.rs  compute.rs  model.rs
ebpf-xdp-program/src/stats/alert/: model.rs  semantics.rs
ebpf-xdp-program/src/stats/anomaly/: classifier.rs  zscore.rs
ebpf-xdp-program/src/stats/baseline/: ewma.rs  proto.rs
ebpf-xdp-program/src/stats/rate/: compute.rs  model.rs
ewma-detector/: Cargo.toml
ewma-detector/src/: estimator.rs  ewma.rs  lib.rs  rate.rs  zscore.rs
grafana/dashboards/: xdp-anomaly.json
grafana/provisioning/dashboards/: dashboard.yml
grafana/provisioning/datasources/: prometheus.yml
scripts/: cargo-runner.sh
