[workspace]
resolver = "2"
members = [
    "ebpf-xdp-program",
    "ebpf-xdp-program-common",
    "ebpf-xdp-program-ebpf",
]
default-members = ["ebpf-xdp-program", "ebpf-xdp-program-common"]

[workspace.package]
license = "MIT OR Apache-2.0"
edition = "2024"

[workspace.dependencies]
aya = { git = "https://github.com/aya-rs/aya", rev = "a9945b0957343b46657df7f8d905a5eedff7c43c", default-features = false }
aya-build = { git = "https://github.com/aya-rs/aya", rev = "a9945b0957343b46657df7f8d905a5eedff7c43c", default-features = false }
aya-ebpf = { git = "https://github.com/aya-rs/aya", rev = "a9945b0957343b46657df7f8d905a5eedff7c43c", default-features = false }
aya-log = { git = "https://github.com/aya-rs/aya", rev = "a9945b0957343b46657df7f8d905a5eedff7c43c", default-features = false }
aya-log-ebpf = { git = "https://github.com/aya-rs/aya", rev = "a9945b0957343b46657df7f8d905a5eedff7c43c", default-features = false }

anyhow = { version = "1", default-features = false }
cargo_metadata = { version = "0.23.0", default-features = false }
# `std` feature is currently required to build `clap`.
#
# See https://github.com/clap-rs/clap/blob/61f5ee5/clap_builder/src/lib.rs#L15.
clap = { version = "4.5.20", default-features = false, features = ["std"] }
env_logger = { version = "0.11.5", default-features = false }
libc = { version = "0.2.159", default-features = false }
log = { version = "0.4.22", default-features = false }
tokio = { version = "1.40.0", features = [
    "rt-multi-thread",
    "macros",
    "signal",
    "time",
] }
which = { version = "6.0.0", default-features = false }
serde = { version = "1", default-features = false, features = ["derive"] }
toml = { version = "0.8", default-features = false, features = ["parse"] }

[profile.release.package.ebpf-xdp-program-ebpf]
debug = 2
codegen-units = 1
